genTrainML/hls4mlCICADA-like_NN/newSNAIL_prj/myproject_prj/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2020.1 (64-bit)
Copyright 1986-2020 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-1161] The maximum of name length is set into 80.
INFO: [HLS 200-10] Setting target device to 'xc7vx690t-ffg1927-2'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 6.25ns.
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 0.781ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'firmware/myproject.cpp' ... 
WARNING: [HLS 200-40] In file included from firmware/myproject.cpp:1:
In file included from /cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/iostream:37:
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:744:5: error: builtin feature check macro requires a parenthesized identifier
#if _GLIBCXX_HAS_BUILTIN(__is_same)
    ^
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:728:35: note: expanded from macro '_GLIBCXX_HAS_BUILTIN'
#  define _GLIBCXX_HAS_BUILTIN(B) __has_builtin(B)
                                  ^
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:744:5: error: expected end of line in preprocessor expression
#if _GLIBCXX_HAS_BUILTIN(__is_same)
    ^
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/x86_64-unknown-linux-gnu/bits/c++config.h:728:50: note: expanded from macro '_GLIBCXX_HAS_BUILTIN'
#  define _GLIBCXX_HAS_BUILTIN(B) __has_builtin(B)
                                                 ^
In file included from firmware/myproject.cpp:4:
In file included from firmware/parameters.h:7:
In file included from firmware/nnet_utils/nnet_code_gen.h:4:
In file included from firmware/nnet_utils/nnet_helpers.h:8:
In file included from /cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/map:60:
In file included from /cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/bits/stl_map.h:63:
/cvmfs/cms.cern.ch/slc7_amd64_gcc11/external/gcc/11.2.1-f9b9dfdd886f71cd63f5538223d8f161/lib/gcc/x86_64-unknown-linux-gnu/11.2.1/../../../../include/c++/11.2.1/tuple:75:24: error: token is not a valid binary operator in a preprocessor subexpression
#if __has_cpp_attribute(__no_unique_address__)
    ~~~~~~~~~~~~~~~~~~~^
3 errors generated.
